--- a/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
@@ -9,15 +9,70 @@ text.system.salgon = Sistema de gerenciamento de Games
 title.home = Home
 title.game = Game
 
-game.text.createSucceeded = Game cadastrado com sucesso\: 
-game.text.updateSucceeded = Dados do Game atualizados com sucesso\: {0}.
-game.text.deleteSucceeded = Game excluidos com sucesso\: {0}
-game.title = Cadastro de Game
+manageGame.form.name = Nome
+manageGame.form.name.tooltip = Nome do game
+
+manageGame.text.createSucceeded = Game cadastrado com sucesso\: 
+manageGame.text.updateSucceeded = Dados do Game atualizados com sucesso\: {0}.
+manageGame.text.deleteSucceeded = Game excluidos com sucesso\: {0}
+manageGame.text.filter.byName = por nome
+manageGame.text.noEntitiesFiltered = No Game match the selected filter
+manageGame.text.noEntities = No Game created yet
+
+manageGame.title.create = Cadastrar novo Game
+manageGame.title.update = Alterar cadastro de Game
+manageGame.title.retrieve = Dados do Game
+
+manageGame.title = Cadastro de Game
+
+
+
+# Generic messages for CRUD web pages:
 
 
 
 
-
+crud.button.add = Adicionar
+crud.button.filter = Filtrar listagem
+crud.button.cancelFilter = Cancelar filtro
+crud.button.create = Novo
+crud.button.retrieve = Consultar
+crud.button.update = Alterar
+crud.button.delete = Excluir
+crud.button.cancelDeletion = Cancelar
+crud.button.confirmDeletion = Confirmar exclusão
+crud.button.cancel = Cancelar
+crud.button.save = Salvar
+crud.button.back = Voltar
+crud.help.hotkeys.filterFocus = coloca o foco no campo filtro
+crud.help.hotkeys.clearFilter = cancela o filtro atual
+crud.help.hotkeys.create = abre o formulário de novo cadastro
+crud.help.hotkeys.retrieve = consulta os dados do item selecionado
+crud.help.hotkeys.update = abre o formulário para alteração dos dados do item selecionado
+crud.help.hotkeys.delete = adiciona o item selecionado à lixeira para exclusão
+crud.help.hotkeys.cancelDeletion = cancela a exclusão e limpa a lixeira
+crud.help.hotkeys.confirmDeletion = confirma a exclusão dos itens que encontram-se na lixeira
+crud.help.hotkeys.focusFirstField = coloca o foco no primeiro campo do formulário 
+crud.help.hotkeys.backToList = volta à listagem
+crud.help.hotkeys.save = salva as alterações e volta à listagem
+crud.help.hotkeys.cancel = cancela a operação e retorna
+crud.help.hotkeys.back = retorna
+crud.hotkey.filterFocus = f
+crud.hotkey.clearFilter = l
+crud.hotkey.create = n
+crud.hotkey.retrieve = c
+crud.hotkey.update = a
+crud.hotkey.delete = e
+crud.hotkey.cancelDeletion = esc
+crud.hotkey.confirmDeletion = s
+crud.hotkey.focusFirstField = f
+crud.hotkey.backToList = esc
+crud.hotkey.save = ctrl+return
+crud.hotkey.cancel = esc
+crud.hotkey.back = esc
+crud.text.filter = Procurar
+crud.text.filterInfo = Filtrando {0}: {1}
+crud.text.trashHeader = Cadastros a excluir:
 
 
 
