--- a/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
@@ -9,8 +9,17 @@ text.system.salgon = Sistema de gerenciamento de Games
 title.home = Home
 title.game = Game
 
+
+
+
 manageGame.form.name = Nome
 manageGame.form.name.tooltip = Nome do game
+manageGame.form.manufacturer = Empresa
+manageGame.form.manufacturer.tooltip = nome da Empresa fabricante do Game
+manageGame.form.genero = Genero
+manageGame.form.genero.tooltip = Genero do Game
+manageGame.form.requisitos = Requisitos minimos
+manageGame.form.requisitos.tooltip = Requisitos minimos para funcionamento
 
 manageGame.text.createSucceeded = Game cadastrado com sucesso\: 
 manageGame.text.updateSucceeded = Dados do Game atualizados com sucesso\: {0}.
@@ -18,15 +27,15 @@ manageGame.text.deleteSucceeded = Game excluidos com sucesso\: {0}
 manageGame.text.filter.byName = por nome
 manageGame.text.noEntitiesFiltered = No Game match the selected filter
 manageGame.text.noEntities = No Game created yet
+manageGame.text.filter.byManufacturer = por empresa
 
 manageGame.title.create = Cadastrar novo Game
 manageGame.title.update = Alterar cadastro de Game
 manageGame.title.retrieve = Dados do Game
-
 manageGame.title = Cadastro de Game
 
-
-
+manageGame.error.repeated = Nome e Empresa do Game Repitidos
+manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo nome e empresa
 # Generic messages for CRUD web pages:
 
 
@@ -70,7 +79,7 @@ crud.hotkey.backToList = esc
 crud.hotkey.save = ctrl+return
 crud.hotkey.cancel = esc
 crud.hotkey.back = esc
-crud.text.filter = Procurar
+crud.text.filter = Procurar  :
 crud.text.filterInfo = Filtrando {0}: {1}
 crud.text.trashHeader = Cadastros a excluir:
 
