--- a/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/view/messages_pt_BR.properties
@@ -6,10 +6,10 @@
 text.system.name = GameTime
 text.system.salgon = Sistema de gerenciamento de Games
 
+
 title.home = Home
 title.game = Game
-
-
+title.conta = Conta
 
 
 manageGame.form.name = Nome
@@ -36,10 +36,33 @@ manageGame.title = Cadastro de Game
 
 manageGame.error.repeated = Nome e Empresa do Game Repitidos
 manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo nome e empresa
+
+
+
+
+
+
+manageConta.form.name = Nome
+manageConta.form.name.tooltip = Nome da Conta
+
+manageConta.text.createSucceeded = Conta cadastrado com sucesso\: 
+manageConta.text.updateSucceeded = Dados da Coonta atualizados com sucesso\:
+manageConta.text.deleteSucceeded = Conta excluida com sucesso\: {0}
+manageConta.text.filter.byName = por nome
+manageConta.text.noEntitiesFiltered = No Conta match the selected filter
+manageConta.text.noEntities = No Conta created yet
+
+manageConta.title.create = Cadastrar novo Conta
+manageConta.title.update = Alterar cadastro de Conta
+manageConta.title.retrieve = Dados do Conta
+manageConta.title = Cadastro de Conta
+
+manageConta.error.repeated = Nome e Empresa do Game Repitidos
+manageConta.error.multipleInstancesError = multiplo game cadastrado com o mesmo nome e empresa
+
+
+
 # Generic messages for CRUD web pages:
-
-
-
 
 crud.button.add = Adicionar
 crud.button.filter = Filtrar listagem
@@ -105,139 +128,7 @@ facesValidator.sigmeTaxCodeValidator.invalidTaxCode.detail = Por favor verifique
 email.confirmationCode.subject = Sigme {0}: confirme seu cadastro
 email.confirmationCode.text = Para confirmar seu cadastro no Sigme, copie e cole o código abaixo no campo \"Código de confirmação\" da tela de cadastro do sistema:\n\n{0}\n\nCaso você não tenha se cadastrado, alguém o fez utilizando o seu endereço de e-mail. Não se preocupe, pois o cadastro não poderá ser finalizado sem o código de confirmação.\n\nObrigado,\n- Equipe {1}
 
-# Text for use case "Install System":
-installSystem.button.registerAdministrator = Cadastrar administrador
-installSystem.button.registerOwnerInstitution = Cadastrar federativa
-installSystem.button.saveSmtpConfig = Salvar configurações
-installSystem.dialog.wait.title = Instalação em curso
-installSystem.dialog.wait.contents = O Sigme está sendo instalado. Por favor, aguarde até que a operação seja concluída.
-installSystem.error.passwordsDontMatch.summary = Atenção: as senhas não conferem.
-installSystem.error.passwordsDontMatch.detail = Por favor, certifique-se que digitou a mesma senha nos dois campos.
-installSystem.error.installFailed.summary = Erro na instalação do sistema.
-installSystem.error.installFailed.detail = Uma falha durante a operação impediu a correta instalação do sistema. Por favor, contate o suporte do Sigme.
-installSystem.field.admin.name = Nome completo
-installSystem.field.admin.taxCode = CPF
-installSystem.field.admin.email = E-mail
-installSystem.field.admin.shortName = Nome preferido
-installSystem.field.admin.password = Senha
-installSystem.field.admin.repeatPassword = Confirme a senha
-installSystem.field.owner.name = Nome
-installSystem.field.owner.acronym = Sigla
-installSystem.field.config.smtpServerAddress = Endereço do servidor 
-installSystem.field.config.smtpServerPort = Porta
-installSystem.field.config.smtpUsername = Usuário
-installSystem.field.config.smtpPassword = Senha
-installSystem.text.systemAlreadyInstalled = O Sigme já se encontra instalado. Por favor identifique-se usando as funções de controle de acesso do menu para utilizar as funcionalidades do sistema.
-installSystem.text.instructions.admin = Para instalar o Sigme é necessário cadastrar o administrador. Por favor, preencha os campos abaixo com os dados da pessoa que irá administrar o sistema. Depois de cadastrado, o administrador poderá alterar seus próprios dados após identificar-se.
-installSystem.text.instructions.owner = Além do administrador, é preciso registrar algumas informações sobre a federativa espírita que está utilizando o Sigme. Após a instalação, é possível adicionar mais dados desta instituição, se desejado.
-installSystem.text.instructions.smtp = Algumas funcionalidades do Sigme requerem o envio de mensagens por e-mail. Por favor, informe a configuração de envio de e-mail do servidor no qual o sistema está hospedado. Você pode obtê-lo junto à empresa que fornece serviços de hospedagem Internet.  
-installSystem.text.done = Parabéns! O Sigme foi corretamente instalado. Identifique-se utilizando as funções de controle de acesso do menu principal para começar a utilizá-lo.
-installSystem.title = Instalação do sistema
 
-# Text for use case "Manage Institutions".
-manageInstitutions.button.anotherTelephone = Cadastrar outro telefone
-manageInstitutions.button.editTelephone = Alterar telefone selecionado
-manageInstitutions.button.removeTelephone = Excluir telefone selecionado
-manageInstitutions.error.repeatedName = Uma instituição com este nome já foi cadastrada em {0,date,short}. Não é permitido cadastrar duas instituições com o mesmo nome.
-manageInstitutions.error.multipleInstancesError = Já existem instituições cadastradas com este nome. Não é permitido cadastrar duas instituições com o mesmo nome.
-manageInstitutions.form.name = Nome
-manageInstitutions.form.name.tooltip = Nome completo da instituição, sem abreviações.
-manageInstitutions.form.type = Tipo
-manageInstitutions.form.acronym = Sigla
-manageInstitutions.form.lastUpdateDate = Última atualização
-manageInstitutions.form.type.blankOption = (Selecione um tipo)
-manageInstitutions.form.street = Rua
-manageInstitutions.form.streetComplement = Bairro
-manageInstitutions.form.city = Cidade
-manageInstitutions.form.zipCode = CEP
-manageInstitutions.form.webPage = Página Web
-manageInstitutions.form.email = Email
-manageInstitutions.form.telephones = Telefones
-manageInstitutions.form.telephone.number = Número
-manageInstitutions.form.telephone.type = Tipo
-manageInstitutions.form.telephone.type.blankOption = (Selecione um tipo)
-manageInstitutions.text.noEntities = Não há instituições cadastradas.
-manageInstitutions.text.noEntitiesFiltered = Nenhuma instituição atende aos critérios de filtragem.
-manageInstitutions.text.filter.byName = por nome
-manageInstitutions.text.filter.byAcronym = por sigla
-manageInstitutions.text.filter.byCity = por cidade
-manageInstitutions.text.filter.byRegional = por regional
-manageInstitutions.text.filter.byType = por tipo
-manageInstitutions.text.address = Endereço
-manageInstitutions.text.contactInformation = Informações de contato
-manageInstitutions.text.noTelephones = Nenhum telefone cadastrado.
-manageInstitutions.text.newTelephone = Cadastrar novo telefone
-manageInstitutions.text.createSucceeded = Institui\u00E7\u00E3o cadastrada com sucesso\: {0}.
-manageInstitutions.text.updateSucceeded = Dados da institui\u00E7\u00E3o atualizados com sucesso\: {0}.
-manageInstitutions.text.deleteSucceeded = Institui\u00E7\u00F5es exclu\u00EDdas com sucesso\: {0}
-manageInstitutions.title = Cadastro de instituições
-manageInstitutions.title.create = Cadastrar nova instituição
-manageInstitutions.title.update = Alterar cadastro de instituição
-manageInstitutions.title.retrieve = Dados da instituição
-
-# Text for use case "Manage Spiritists".
-manageSpiritists.button.anotherTelephone = Cadastrar outro telefone
-manageSpiritists.button.editTelephone = Alterar telefone selecionado
-manageSpiritists.button.removeTelephone = Excluir telefone selecionado
-manageSpiritists.button.anotherAttendance = Registrar outra participa\u00E7\u00E3o
-manageSpiritists.button.editAttendance = Alterar participação selecionada
-manageSpiritists.button.removeAttendance = Excluir esta participa\u00E7\u00E3o
-manageSpiritists.error.repeatedEmail = Um espírita com este email já foi cadastrado em {0,date,short}. Não é permitido cadastrar dois espíritas com o mesmo email.
-manageSpiritists.error.multipleInstancesError = Já existem espíritas cadastrados com este endereço de email. Não é permitido cadastrar dois espíritas com o mesmo email.
-manageSpiritists.form.active = Ativo?
-manageSpiritists.form.active.true = Sim
-manageSpiritists.form.active.false = Não
-manageSpiritists.form.name = Nome completo
-manageSpiritists.form.name.tooltip = Nome completo do espírita, sem abreviações.
-manageSpiritists.form.taxCode = CPF
-manageSpiritists.form.taxCode.tooltip = O CPF deve ser único para cada espírita. Obrigatório somente para cadastros ativos.
-manageSpiritists.form.shortName = Nome preferido
-manageSpiritists.form.email = Email
-manageSpiritists.form.email.tooltip = O e-mail deve ser único para cada espírita. Obrigatório somente para cadastros ativos.
-manageSpiritists.form.newPassword = Nova senha
-manageSpiritists.form.birthDate = Data de nascimento
-manageSpiritists.form.gender = Sexo
-manageSpiritists.form.gender.female.label = Feminino
-manageSpiritists.form.gender.female.value = F
-manageSpiritists.form.gender.male.label = Masculino
-manageSpiritists.form.gender.male.value = M
-manageSpiritists.form.street = Rua
-manageSpiritists.form.streetComplement = Bairro
-manageSpiritists.form.city = Cidade
-manageSpiritists.form.zipCode = CEP
-manageSpiritists.form.telephones = Telefones
-manageSpiritists.form.institution = Instituição
-manageSpiritists.form.attendance.start = De (mm/aaaa)
-manageSpiritists.form.attendance.active = Frequenta?
-manageSpiritists.form.attendance.active.true = Sim
-manageSpiritists.form.attendance.active.false = Não
-manageSpiritists.form.attendance.end = Até (mm/aaaa)
-manageSpiritists.form.lastUpdateDate = Última atualização
-manageSpiritists.form.telephone.number = Número
-manageSpiritists.form.telephone.type = Tipo
-manageSpiritists.form.telephone.type.blankOption = (Selecione um tipo)
-manageSpiritists.text.noEntities = Não há espíritas cadastrados.
-manageSpiritists.text.noEntitiesFiltered = Nenhum espírita atende aos critérios de filtragem.
-manageSpiritists.text.filter.byName = por nome
-manageSpiritists.text.filter.byEmail = por e-mail
-manageSpiritists.text.filter.byActiveAttendance = por instituição que frequenta
-manageSpiritists.text.filter.byInactiveAttendance = por instituição que já frequentou
-manageSpiritists.text.address = Endereço
-manageSpiritists.text.contactInformation = Informações de contato
-manageSpiritists.text.attendances = Instituições que frequenta ou frequentou
-manageSpiritists.text.noTelephones = Nenhum telefone cadastrado.
-manageSpiritists.text.newTelephone = Cadastrar novo telefone
-manageSpiritists.text.noAttendances = Não há participações cadastradas.
-manageSpiritists.text.newAttendance = Cadastrar nova participação
-manageSpiritists.text.createSucceeded = Esp\u00EDrita cadastrado com sucesso\: {0}.
-manageSpiritists.text.updateSucceeded = Dados do esp\u00EDrita atualizados com sucesso\: {0}.
-manageSpiritists.text.deleteSucceeded = Esp\u00EDritas exclu\u00EDdos com sucesso\: {0}
-manageSpiritists.text.active = (Ativo)
-manageSpiritists.text.notActive = (Não ativo)
-manageSpiritists.title = Cadastro de espíritas
-manageSpiritists.title.create = Cadastrar novo espírita
-manageSpiritists.title.update = Alterar cadastro de espírita
-manageSpiritists.title.retrieve = Dados do espírita
 
 # Text for use case "Register".
 register.title = Cadastre-se
