--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -6,11 +6,9 @@
 text.system.name = GameTime
 text.system.salgon = Sistema de gerenciamento de Games
 
-
 title.home = Home
 title.game = Game
 title.conta = Conta
-
 
 manageGame.form.name = Nome
 manageGame.form.name.tooltip = Nome do game
@@ -42,25 +40,29 @@ manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo n
 
 
 
-manageConta.form.name = Nome
-manageConta.form.name.tooltip = Nome da Conta
+manageGameAccount.form.name = Nome
+manageGameAccount.form.name.tooltip = Nome da Conta
 
-manageConta.text.createSucceeded = Conta cadastrado com sucesso\: 
-manageConta.text.updateSucceeded = Dados da Coonta atualizados com sucesso\:
-manageConta.text.deleteSucceeded = Conta excluida com sucesso\: {0}
-manageConta.text.filter.byName = por nome
-manageConta.text.noEntitiesFiltered = No Conta match the selected filter
-manageConta.text.noEntities = No Conta created yet
+manageGameAccount.text.createSucceeded = Conta cadastrado com sucesso\: 
+manageGameAccount.text.updateSucceeded = Dados da Coonta atualizados com sucesso\:
+manageGameAccount.text.deleteSucceeded = Conta excluida com sucesso\: {0}
+manageGameAccount.text.filter.byName = por nome
+manageGameAccount.text.noEntitiesFiltered = No Conta match the selected filter
+manageGameAccount.text.noEntities = No Conta created yet
 
-manageConta.title.create = Cadastrar novo Conta
-manageConta.title.update = Alterar cadastro de Conta
-manageConta.title.retrieve = Dados do Conta
-manageConta.title = Cadastro de Conta
+manageGameAccount.title.create = Cadastrar novo GameAccount
+manageGameAccount.title.update = Alterar cadastro de Conta
+manageGameAccount.title.retrieve = Dados do Conta
+manageGameAccount.title = Cadastro de Conta
 
-manageConta.error.repeated = Nome e Empresa do Game Repitidos
-manageConta.error.multipleInstancesError = multiplo game cadastrado com o mesmo nome e empresa
+manageGameAccount.error.repeated = Nome e Empresa do Game Repitidos
+manageGameAccount.error.multipleInstancesError = multiplo game cadastrado com o mesmo nome e empresa
 
 
+
+
+error.login.summary = Falha na identificação.
+error.login.detail = E-mail ou senha não conferem.
 
 # Generic messages for CRUD web pages:
 
