--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -9,6 +9,13 @@ text.system.salgon = Sistema de gerenciamento de Games
 title.home = Home
 title.game = Game
 title.conta = Conta
+title.login = Identificação
+
+login.field.password = Senha
+login.button.login = Entrar
+login.field.email = Email
+login.label = Identifique-se
+login.successful = Você esta logado
 
 manageGame.form.name = Nome
 manageGame.form.name.tooltip = Nome do game
