--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -10,6 +10,7 @@ title.home = Home
 title.game = Game
 title.conta = Conta
 title.login = Identificação
+title.registration = Cadastro
 
 login.field.password = Senha
 login.button.login = Entrar
