--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -12,6 +12,8 @@ title.conta = Conta
 title.login = Identificação
 title.registration = Cadastro
 
+registration.form.email = Email
+
 login.field.password = Senha
 login.button.login = Entrar
 login.field.email = Email
