--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -3,6 +3,9 @@
 ## Language: Brazilian Portuguese 
 ##
 
+
+
+
 text.system.name = GameTime
 text.system.salgon = Sistema de gerenciamento de Games
 
@@ -20,6 +23,10 @@ login.field.email = Email
 login.label = Identifique-se
 login.successful = Você esta logado
 
+
+
+
+# MENSAGENS PARA MANAGEGAME
 manageGame.form.name = Nome
 manageGame.form.name.tooltip = Nome do game
 manageGame.form.manufacturer = Empresa
@@ -28,6 +35,11 @@ manageGame.form.genero = Genero
 manageGame.form.genero.tooltip = Genero do Game
 manageGame.form.requisitos = Requisitos minimos
 manageGame.form.requisitos.tooltip = Requisitos minimos para funcionamento
+
+manageGame.forbiden.retrieve = Voce não tem permissao, faça o login para Consultar o Game:
+manageGame.forbiden.delete = Voce não tem permissao, faça o login para Deletar o Game:
+manageGame.forbiden.create = Voce não tem permissao, faça o login para Cria um novo Game:
+manageGame.forbiden.update = Voce não tem permissao, faça o login para atualizar o Game:
 
 manageGame.text.createSucceeded = Game cadastrado com sucesso\: 
 manageGame.text.updateSucceeded = Dados do Game atualizados com sucesso\: {0}.
