--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -14,14 +14,25 @@ title.game = Game
 title.conta = Conta
 title.login = Identificação
 title.registration = Cadastro
+title.logout = Sair
+title.login = Entrar
 
-registration.form.email = Email
+mensage.wellcome = Seja Bem-vindo
+mensage.not.login = Usuario Não identificado
 
 login.field.password = Senha
-login.button.login = Entrar
 login.field.email = Email
+login.button.login = Entrar
 login.label = Identifique-se
 login.successful = Você esta logado
+
+
+
+registration.form.email = Email
+registration.form.name = Nome
+registration.form.password = Senha
+registration.regex.email=([^.@]+)(\\.[^.@]+)*@([^.@]+\\.)+([^.@]+)
+registration.regex.email.message = O valor informado não é um endereço de e-mail válido.
 
 
 
