--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -16,6 +16,7 @@ title.login = Identificação
 title.registration = Cadastro
 title.logout = Sair
 title.login = Entrar
+title.groupGame = Grupos
 
 mensage.wellcome = Seja Bem-vindo
 mensage.not.login = Usuario Não identificado
