--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -5,6 +5,9 @@
 
 
 
+text.help.title = Ajuda
+text.help.defaultContent = Não há ajuda para est pagina
+text.hotkeys = Atalhos
 
 text.system.name = GameTime
 text.system.salgon = Sistema de gerenciamento de Games
@@ -18,7 +21,9 @@ title.logout = Sair
 title.login = Entrar
 title.groupGame = Grupos
 
-mensage.wellcome = Seja Bem-vindo
+mensage.wellcome.user = Seja Bem-vindo Usuario
+mensage.wellcome.admin = Seja Bem-vindo Administrador
+
 mensage.not.login = Usuario Não identificado
 
 login.field.password = Senha
