--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -78,7 +78,28 @@ manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo n
 
 
 
+# MENSAGENS PARA MANAGEGROUPGAME
+manageGroupGame.form.name = Nome
+manageGroupGame.form.name.tooltip = Nome do game
 
+manageGroupGame.text.createSucceeded = Grupo cadastrado com sucesso\: 
+manageGroupGame.text.updateSucceeded = Dados do Grupo atualizados com sucesso\: {0}.
+manageGroupGame.text.deleteSucceeded = Grupo excluidos com sucesso\: {0}
+manageGroupGame.text.filter.byName = por nome
+manageGroupGame.text.noEntitiesFiltered = No Grupo match the selected filter
+manageGroupGame.text.noEntities = Nenhum Grupo criado ainda
+
+manageGroupGame.title.create = Cadastrar novo Grupo
+manageGroupGame.title.update = Alterar cadastro de Grupo
+manageGroupGame.title.retrieve = Dados do Grupo
+manageGroupGame.title = Cadastro de Grupo
+
+
+
+
+
+
+# MENSAGENS PARA MANAGEGAMEACCOUNT
 manageGameAccount.form.name = Nome
 manageGameAccount.form.name.tooltip = Nome da Conta
 
