--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -81,6 +81,7 @@ manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo n
 # MENSAGENS PARA MANAGEGROUPGAME
 manageGroupGame.form.name = Nome
 manageGroupGame.form.name.tooltip = Nome do game
+manageGroupGame.form.game = Game
 
 manageGroupGame.text.createSucceeded = Grupo cadastrado com sucesso\: 
 manageGroupGame.text.updateSucceeded = Dados do Grupo atualizados com sucesso\: {0}.
