--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -82,6 +82,7 @@ manageGame.error.multipleInstancesError = multiplo game cadastrado com o mesmo n
 manageGroupGame.form.name = Nome
 manageGroupGame.form.name.tooltip = Nome do game
 manageGroupGame.form.game = Game
+manageGroupGame.form.descricao = Descrição
 
 manageGroupGame.text.createSucceeded = Grupo cadastrado com sucesso\: 
 manageGroupGame.text.updateSucceeded = Dados do Grupo atualizados com sucesso\: {0}.
