--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -96,6 +96,10 @@ manageGroupGame.title.update = Alterar cadastro de Grupo
 manageGroupGame.title.retrieve = Dados do Grupo
 manageGroupGame.title = Cadastro de Grupo
 
+manageGroupGame.table.name = nome do grupo
+manageGroupGame.table.game = nome do game
+manageGroupGame.table.admin = nome do admin
+
 
 
 
