--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -10,7 +10,14 @@ text.help.defaultContent = Não há ajuda para est pagina
 text.hotkeys = Atalhos
 
 text.system.name = GameTime
-text.system.salgon = Sistema de gerenciamento de Games
+text.system.salgon = Sistema de Gerenciamento de Games
+
+title.home.index = Bem Vindo ao GameTime
+title.text_1.index = Esse projeto foi desenvolvido para tornar o gerenciamento de jogos MMORPG mais fácil e seguro, para que jogadores compartilhem suas contas sem nenhum receio e possam aproveitar ao máximo seu jogo no tempo ideal. 
+title.sub_1.index = Motivação:
+title.page.index = GameTime
+title.sub_2.index = Desenvolvedores:
+title.text_2.index = Bruno Manzoli e Henrique Castro
 
 title.home = Home
 title.game = Game
@@ -39,7 +46,7 @@ registration.form.name = Nome
 registration.form.password = Senha
 registration.regex.email=([^.@]+)(\\.[^.@]+)*@([^.@]+\\.)+([^.@]+)
 registration.regex.email.message = O valor informado não é um endereço de e-mail válido.
-
+registration.form.button = Cadastrar
 
 
 
