--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -84,6 +84,12 @@ manageGroupGame.form.name.tooltip = Nome do game
 manageGroupGame.form.game = Game
 manageGroupGame.form.descricao = Descrição
 
+manageGroupGame.form.userMembers = Usuarios Membros
+manageGroupGame.form.addUser = Selecione Usuario
+
+
+manageGroupGame.text.delete.user.fail = Selecione o Usuario a ser removido
+manageGroupGame.text.add.user.fail = Selecione o Usuario a ser inserido
 manageGroupGame.text.createSucceeded = Grupo cadastrado com sucesso\: 
 manageGroupGame.text.updateSucceeded = Dados do Grupo atualizados com sucesso\: {0}.
 manageGroupGame.text.deleteSucceeded = Grupo excluidos com sucesso\: {0}
@@ -91,6 +97,7 @@ manageGroupGame.text.filter.byName = por nome
 manageGroupGame.text.noEntitiesFiltered = No Grupo match the selected filter
 manageGroupGame.text.noEntities = Nenhum Grupo criado ainda
 
+manageGroupGame.title.addUser = Adicionar / Remover Usuarios
 manageGroupGame.title.create = Cadastrar novo Grupo
 manageGroupGame.title.update = Alterar cadastro de Grupo
 manageGroupGame.title.retrieve = Dados do Grupo
@@ -99,7 +106,6 @@ manageGroupGame.title = Cadastro de Grupo
 manageGroupGame.table.name = nome do grupo
 manageGroupGame.table.game = nome do game
 manageGroupGame.table.admin = nome do admin
-
 
 
 
