--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -83,7 +83,7 @@ manageGroupGame.form.name = Nome
 manageGroupGame.form.name.tooltip = Nome do game
 manageGroupGame.form.game = Game
 manageGroupGame.form.descricao = Descrição
-
+manageGroupGame.form.gameAccounts = Contas do Grupo
 manageGroupGame.form.userMembers = Usuarios Membros
 manageGroupGame.form.addUser = Selecione Usuario
 
@@ -114,6 +114,8 @@ manageGroupGame.table.admin = nome do admin
 # MENSAGENS PARA MANAGEGAMEACCOUNT
 manageGameAccount.form.name = Nome
 manageGameAccount.form.name.tooltip = Nome da Conta
+manageGameAccount.form.login = Login da Conta
+manageGameAccount.form.password = Senha da Conta
 
 manageGameAccount.text.createSucceeded = Conta cadastrado com sucesso\: 
 manageGameAccount.text.updateSucceeded = Dados da Coonta atualizados com sucesso\:
