Atualização - Messages/Layout

--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -36,6 +36,7 @@ mensage.not.login = Usuario Não identificado
 login.field.password = Senha
 login.field.email = Email
 login.button.login = Entrar
+login.button.auto.login = Auto Login
 login.label = Identifique-se
 login.successful = Você esta logado
 
@@ -57,7 +58,7 @@ manageGame.form.manufacturer = Empresa
 manageGame.form.manufacturer.tooltip = nome da Empresa fabricante do Game
 manageGame.form.genero = Genero
 manageGame.form.genero.tooltip = Genero do Game
-manageGame.form.requisitos = Requisitos minimos
+manageGame.form.requisitos = Requisitos
 manageGame.form.requisitos.tooltip = Requisitos minimos para funcionamento
 
 manageGame.forbiden.retrieve = Voce não tem permissao, faça o login para Consultar o Game:
