--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -67,7 +67,7 @@ manageGame.text.updateSucceeded = Dados do Game atualizados com sucesso\: {0}.
 manageGame.text.deleteSucceeded = Game excluidos com sucesso\: {0}
 manageGame.text.filter.byName = por nome
 manageGame.text.noEntitiesFiltered = No Game match the selected filter
-manageGame.text.noEntities = No Game created yet
+manageGame.text.noEntities = Nenhum  Game criado ainda
 manageGame.text.filter.byManufacturer = por empresa
 manageGame.title.create = Cadastrar novo Game
 manageGame.title.update = Alterar cadastro de Game
@@ -101,6 +101,7 @@ manageGroupGame.text.updateSucceeded = Dados do Grupo atualizados com sucesso
 manageGroupGame.text.deleteSucceeded = Grupo excluidos com sucesso
 manageGroupGame.text.filter.byName = Por Nome
 manageGroupGame.text.noEntitiesFiltered = Sem Grupo para o Filtro selecionado
+manageGrupoGame.text.noEntities = Nenhum Grupo criado ainda
 manageGroupGame.text.noEntities = Nenhum Grupo criado ainda
 manageGroupGame.title.addUser = Adicionar / Remover Usuarios
 manageGroupGame.title.create = Cadastrar novo Grupo
@@ -131,6 +132,7 @@ manageGameAccount.error.repeated = Login para o Game Ja Cadastrado
 manageGameAccount.error.multipleInstancesError = multiplas Contas cadastrada com o mesmo login para este Game
 manageGameAccount.jogar.contaPlay = Selecione a Conta
 manageGameAccount.jogar.button.play = Iniciar
+manageGameAccount.jogar.button.parar = Parar
 
 
 
