Codigo - Link Convidar Amigo / Classe Started para povoar o banco

--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -23,7 +23,10 @@ title.game = Game
 title.conta = Conta
 title.login = Identificação
 title.registration = Cadastro
+title.invitation = Convidando um Amigo
+title.invite = Convidar
 title.logout = Sair
+title.convidarAmigo = Convidar
 title.login = Entrar
 title.groupGame = Grupos
 
@@ -46,6 +49,11 @@ registration.form.password = Senha
 registration.regex.email=([^.@]+)(\\.[^.@]+)*@([^.@]+\\.)+([^.@]+)
 registration.regex.email.message = O valor informado não é um endereço de e-mail válido.
 registration.form.button = Cadastrar
+
+manageFriendInvitation.form.button = Convidar
+manageFriendInvitation.form.email.tooltip = Digite o endereço de e-mail.
+manageFriendInvitation.form.email = Email
+manageFriendInvitation.regex.email.message = O valor informado não é um endereço de e-mail válido.
 
 
 
