enviou de email atualização

--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -18,6 +18,7 @@ title.page.index = GameTime
 title.sub_2.index = Desenvolvedores:
 title.text_2.index = Bruno Manzoli e Henrique Castro
 
+title.invitation2 = Enviar Convite
 title.home = Home
 title.game = Game
 title.conta = Conta
