atualizações finais inicialização banco de dados

--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -98,8 +98,8 @@ manageGroupGame.form.name.tooltip = Nome do Grupo
 manageGroupGame.form.game = Game
 manageGroupGame.form.descricao = Descrição
 manageGroupGame.form.gameAccounts = Contas do Grupo
-manageGroupGame.form.userMembers = Usuarios Membros
-manageGroupGame.form.addUser = Selecione Usuario
+manageGroupGame.form.userMembers =  Membros
+manageGroupGame.form.addUser = Iserir Usuario
 manageGroupGame.table.name = Nome do Grupo
 manageGroupGame.table.game = Nome do Game
 manageGroupGame.table.admin = Nome do Admin
