Trabalho 2 - Final Commit

--- a/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
+++ b/GameTime/src/br/ufes/inf/nemo/gametime/messages_pt_BR.properties
@@ -5,7 +5,7 @@
 
 
 text.help.title = Ajuda
-text.help.defaultContent = Não há ajuda para est pagina
+text.help.defaultContent = Não há ajuda para esta página
 text.hotkeys = Atalhos
 
 text.system.name = GameTime
